--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header {
 }
 
 #welcome-container {
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
