--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Shojumaru&display=swap');
 
 body {
     background-color: blue;
@@ -6,6 +6,12 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+h1 {
+    font-family: 'Shojumaru', cursive;
+    font-size: 3em;
+    margin: 0;
 }
 
 img {
@@ -16,13 +22,14 @@ img {
 header {
     width: 75%;
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
     background-color: #6daa30;
+    text-align: center;
 }
 
 .score-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 5%;
 }
 
