--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     box-sizing: border-box;
 }
 
-h1, h2 {
+h1 {
     font-family: 'Shojumaru', cursive;
     font-size: 3em;
     margin: 0;
@@ -26,15 +26,30 @@ img {
 header {
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
     background-color: #6daa30;
     text-align: center;
     padding: 5px 0 20px 0;
     text-shadow: 3px 3px 5px black;
 }
+
+header h1 {
+    color: red;
+}
+
+h2, h3 {
+    margin: 0;
+}
+
 .scores {
-    padding: 0 10px;
+    padding: 10px 10px;
+    color: rgb(8, 203, 252);
+}
+
+.counters {
+    color: whitesmoke;
 }
 #score-container {
     display: flex;
@@ -56,7 +71,8 @@ header {
 }
 
 .container {
-    width: 75%;
+    width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
     position: relative;
 }
@@ -69,12 +85,12 @@ header {
     border: 2px inset blue;
     background-color: aqua;
     color: slategray;
-    width: 25%;
+    width: 30%;
     position: absolute;
     z-index: 3;
-    bottom: 38%;
-    left: 36%;
-    padding: 2em;
+    bottom: 30%;
+    left: 33%;
+    padding: .5em;
     box-shadow: 4px 4px 4px grey;
     border-radius: 15px;
     text-shadow: 3px 3px 5px black;
@@ -89,7 +105,7 @@ header {
     border: 1px solid lightseagreen;
     box-shadow: 3px 3px 2px grey;
     border-radius: 30px;
-
+    padding: .5em;
 }
 
 .btn:hover {
@@ -151,7 +167,7 @@ header {
     background-color: red;
     color: whitesmoke;
     position: absolute;
-    bottom: 85%;
+    bottom: 75%;
     left: 29%;
     width: 40%;
     text-align: center;
@@ -165,7 +181,7 @@ header {
     background-color: greenyellow;
     color: whitesmoke;
     position: absolute;
-    bottom: 85%;
+    bottom: 75%;
     left: 29%;
     width: 40%;
     text-align: center;
@@ -193,9 +209,26 @@ header {
     display: block;
     position: absolute;
     z-index: 2;
-    background-color: rgb(233, 233, 127, .2);
+    background-color: none;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width:800px) {
+    html {
+        font-size: 10px;
+    }
+
+    #menu-container {
+        width: 35%;
+        padding: 1em;
+        bottom: 20%;
+        left: 30%;
+    }
+
+    .btn {
+        font-size: 1rem;
+    }
 }
