--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ h2, h3 {
 }
 
 .btn {
-    width: 60%;
+    width: 70%;
     justify-content: center;
     margin: 5%;
     color: silver;
@@ -218,14 +218,15 @@ h2, h3 {
 
 @media screen and (max-width:800px) {
     html {
+        orientation: landscape;
         font-size: 10px;
     }
 
     #menu-container {
-        width: 35%;
+        width: 40%;
         padding: 1em;
-        bottom: 20%;
-        left: 30%;
+        /* bottom: 20%;
+        left: 30%; */
     }
 
     .btn {
