--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,12 @@ body {
 
 h1 {
     font-family: 'Shojumaru', cursive;
-    font-size: 3em;
+    font-size: 2.5em;
     margin: 0;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.5em;
 }
 
 img {
@@ -29,9 +29,8 @@ header {
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
-    background-color: #6daa30;
+    background-color: rgb(109, 170, 48);
     text-align: center;
-    padding: 5px 0 20px 0;
     text-shadow: 3px 3px 5px black;
 }
 
@@ -44,16 +43,22 @@ h2, h3 {
 }
 
 .scores {
-    padding: 10px 10px;
+    padding: .5em 3em;
     color: rgb(8, 203, 252);
+    text-shadow: 3px 3px 5px black;
 }
 
 .counters {
     color: whitesmoke;
 }
+
 #score-container {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-color: rgb(109, 170, 48);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     line-height: 1em;
 }
 
@@ -84,16 +89,16 @@ h2, h3 {
     text-align: center;
     border: 2px inset blue;
     background-color: aqua;
-    color: slategray;
+    color: darkslateblue;
     width: 30%;
     position: absolute;
     z-index: 3;
-    bottom: 30%;
+    bottom: 35%;
     left: 33%;
     padding: .5em;
     box-shadow: 4px 4px 4px grey;
     border-radius: 15px;
-    text-shadow: 3px 3px 5px black;
+    text-shadow: 3px 3px 5px darkslategray;
 }
 
 .btn {
@@ -192,13 +197,14 @@ h2, h3 {
 
 #game-over {
     display: none;
-    background-color: green;
+    background-color: lightseagreen;
     color: whitesmoke;
     position: absolute;
     z-index: 2;
-    bottom: 50%;
+    bottom: 40%;
     left: 29%;
     width: 40%;
+    padding: 1em;
     text-align: center;
     box-shadow: 6px 6px 10px black;
     border-radius: 15px;
@@ -218,12 +224,11 @@ h2, h3 {
 
 @media screen and (max-width:800px) {
     html {
-        orientation: landscape;
         font-size: 10px;
     }
 
     #menu-container {
-        width: 40%;
+        width: 30%;
         padding: 1em;
         /* bottom: 20%;
         left: 30%; */
