--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ h2 {
     font-size: 1.5em;
 }
 
+h2, h3 {
+    margin: 0;
+}
+
 img {
     max-width: 100%;
 }
@@ -38,12 +42,10 @@ header h1 {
     color: red;
 }
 
-h2, h3 {
-    margin: 0;
-}
+
 
 .scores {
-    padding: .5em 3em;
+    padding: 0 2em 1em 2em;
     color: rgb(8, 203, 252);
     text-shadow: 3px 3px 5px black;
 }
@@ -62,19 +64,6 @@ h2, h3 {
     line-height: 1em;
 }
 
-#welcome {
-    display: none;
-    background-color: #ffc600;
-    align-items: center;
-    text-align: center;
-    border: 5px inset blue;
-    width: 40%;
-    position: absolute;
-    bottom: 37%;
-    left: 33%;
-    padding: 1em 0;
-}
-
 .container {
     width: 100%;
     max-width: 1000px;
@@ -84,33 +73,33 @@ h2, h3 {
 
 #menu-container {
     display: flex;
+    box-sizing: border-box;
     flex-direction: column;
     align-items: center;
     text-align: center;
     border: 2px inset blue;
     background-color: aqua;
     color: darkslateblue;
-    width: 30%;
     position: absolute;
     z-index: 3;
     bottom: 35%;
-    left: 33%;
-    padding: .5em;
+    left: 38%;
+    padding: 1em;
+    margin: 0;
     box-shadow: 4px 4px 4px grey;
     border-radius: 15px;
     text-shadow: 3px 3px 5px darkslategray;
 }
 
 .btn {
-    width: 70%;
     justify-content: center;
-    margin: 5%;
     color: silver;
     background-color: blue;
     border: 1px solid lightseagreen;
     box-shadow: 3px 3px 2px grey;
     border-radius: 30px;
-    padding: .5em;
+    padding: .5em 1em;
+    margin: .8em;
 }
 
 .btn:hover {
@@ -222,17 +211,16 @@ h2, h3 {
     height: 100%;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:700px) {
     html {
         font-size: 10px;
     }
 
     #menu-container {
-        width: 30%;
-        padding: 1em;
+        font-size: 1em;
     }
 
     .btn {
-        font-size: 1rem;
+        font-size: .8em;
     }
 }
